--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.2",
     "leaflet": "^1.9.4",
-    "solid-js": "^1.9.3"
+    "solid-js": "^1.9.3",
+    "solid-styled-components": "^0.28.5"
   },
   "devDependencies": {
     "typescript": "~5.6.2",
