--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.15.2",
+    "@types/leaflet": "^1.9.16",
     "leaflet": "^1.9.4",
     "solid-js": "^1.9.3",
     "solid-styled-components": "^0.28.5"
