--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "prettier": "prettier .",
+    "prettier:fix": "prettier --write .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@solidjs/router": "^0.15.2",
     "@types/leaflet": "^1.9.16",
     "leaflet": "^1.9.4",
+    "prettier": "^3.4.2",
     "solid-js": "^1.9.3",
     "solid-styled-components": "^0.28.5"
   },
