--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
+    "test": "jest",
     "build": "tsc -b && vite build",
     "prettier": "prettier .",
     "prettier:fix": "prettier --write .",
@@ -12,14 +13,15 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.15.2",
-    "@types/leaflet": "^1.9.16",
     "leaflet": "^1.9.4",
-    "prettier": "^3.4.2",
     "solid-js": "^1.9.3",
     "solid-styled-components": "^0.28.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.16",
     "typescript": "~5.6.2",
+    "prettier": "^3.4.2",
+    "jest": "^29.7.0",
     "vite": "^6.0.5",
     "vite-plugin-solid": "^2.11.0"
   }
