--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "solid-styled-components": "^0.28.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/leaflet": "^1.9.16",
-    "typescript": "~5.6.2",
-    "prettier": "^3.4.2",
     "jest": "^29.7.0",
+    "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
+    "typescript": "~5.6.2",
     "vite": "^6.0.5",
     "vite-plugin-solid": "^2.11.0"
   }
