--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,24 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+  server:
+    image: golang
+    restart: always
+    working_dir: /go/src
+    volumes:
+      - ./:/go/src:rw
+      - ./pkg:/go/pkg:rw
+      - ./cache:/root/.cache:rw
+    entrypoint: go run hello aleksi
+    ports:
+      - 8082:8082
+
+  frontend:
+    image: node
+    volumes:
+      - ./frontend:/data:rw
+    ports:
+      - 8081:8081
+    working_dir: /data
+    entrypoint: npm start
